# stock-wave-assistant

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: __init__.py  main.py
app/cli/: __init__.py  preclose_report.py
app/core/: config.py
app/data/: akshare_market_provider.py  market_provider.py  mock_market_provider.py
app/db/: __init__.py  bootstrap.py
app/domain/: __init__.py  indicators.py  pnl.py  report_builder.py  risk.py  trading_calendar.py  wave_state.py
app/schemas/: __init__.py  indicators.py  ledger.py  llm.py  market.py  report.py  risk.py  watchlist.py  wave_state.py
config/: app.yaml  factors.yaml  preferences.yaml  watchlist.yaml
docs/: api-overview.md  architecture.md  configuration.md  index.md  local-launcher.md  roadmap.md  status-labels.md
scripts/: start-local.ps1  stop-local.ps1
tests/: test_akshare_market_provider.py  test_codex_cli_provider.py  test_codex_selfcheck.py  test_config.py  test_config_status.py  test_cors.py  test_database.py  test_health.py  test_indicators.py  test_ledger_api.py  test_ledger_database.py  test_ledger_schema.py  test_local_launcher_scripts.py  test_market_api.py  test_mock_market_provider.py  test_pnl.py  test_preclose_report_run.py  test_report_api.py  test_report_builder.py  test_report_explanation.py  test_report_explanation_api.py  test_risk.py  test_risk_wave_api.py  test_smoke_mvp.py  test_trading_calendar.py  test_watchlist_api.py  test_watchlist_service.py  test_wave_state.py  test_web_mvp_structure.py
web/src/: App.tsx  (+1 more)
(+17 files in other folders)
