[project]
name = "stock-wave-assistant"
version = "0.1.0"
description = "Local A-share watchlist wave-state assistant for research and review."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "pyyaml>=6.0.0",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
akshare = [
    "akshare>=1.17.0",
]
test = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["web*", "docs*", "config*", "tests*", "data*", "node_modules*"]
